--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,11 @@
     transform: scale(0);
    }
    50%{
-    transform: scale(1) translateY(0px);
+    transform: scale(1) ;
     opacity: 1;
    }
    100%{
-    transform: scale(0.5) translate(20px);
+    transform: scale(0.5);
     opacity: 0.5;
    }
 }
